<resources>
    <string name="app_name_short">Erasmus-Id</string>
    <string name="auth_granted">Authorization granted</string>
    <string name="intro_header">OpenID AppAuth Demo</string>
    <string name="openid_logo_content_description">AppAuth Logo</string>
    <string name="refresh_token">Refresh token</string>
    <string name="access_token_expires_at">Access token expires at: %s</string>
    <string name="no_access_token_returned">No access token returned</string>
    <string name="no_refresh_token_returned">No refresh token returned</string>
    <string name="refresh_token_returned">Refresh token returned</string>
    <string name="no_id_token_returned">No ID token returned</string>
    <string name="id_token_returned">ID token returned</string>
    <string name="view_profile">View user info</string>
    <string name="userinfo_profile_content_description">User profile picture</string>
    <string name="login_hint_value">Account ID (e.g. test@example.com)</string>
    <string name="account_id_description">The Account ID is optional. If specified, it is transmitted as a login_hint parameter in the authorization request.</string>
    <string name="auth_options">Authorization options:</string>
    <string name="browser_selector_label">Use browser:</string>
    <string name="browser_icon_contentDescription">Browser app icon</string>
    <string name="browser_appauth_default_label">AppAuth heuristic selection</string>
    <string name="custom_tab_label">"%1$s (custom tab)"</string>
    <string name="retry_label">Retry</string>
    <string name="not_authorized">Not authorized</string>
    <string name="start_authorization">Start authorization</string>
    <string name="reauthorize">Reauthorize</string>
    <string name="sign_out">Sign out</string>
    <string name="no_access_token_expiry">Access time has no defined expiry</string>
    <string name="access_token_expired">Access token has expired</string>
    <string name="auth_settings">Authorization settings in use:</string>

    <string name="app_name">Badge Manager</string>
    <string name="gluu">gluu</string>
    <string name="search">search</string>
    <string name="select_organization">Select Organization</string>
    <string name="title_activity_badge_status">BadgeStatusActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="badge_status">Badge Status</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="request_badges">Request Badges</string>
    <string name="permission_camera_rationale">PERMISSION CAMERA RATIONALE</string>
    <string name="ok">OK</string>
    <string name="low_storage">LOW STORAGE</string>
    <string name="no_permission">NO PERMISSION</string>
    <string name="badge_info">Badge Info</string>
    <string name="select_city">Select City</string>
    <string name="select_state">Select State</string>
    <string name="request_badge">Request badge</string>
    <string name="dummy_org">Houstan Fire Department</string>
    <string name="change_org">Change Organization</string>
    <string name="camera_permission_denied">You have denied for Camera or Media Permission, You can still allow manually from Setting</string>
    <string name="retry">retry</string>
    <string name="exit">exit</string>
    <string name="require_permission">require special permission</string>

    <string name="keyHandleCell">KeyHandle</string>
    <string name="no_date">No date</string>
    <string name="info">Information</string>
    <string name="no_keyhandles">No keyHandles found</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="button_scan_oxpush2">Scan oxPush2 QR code</string>
    <string name="process_qr_code">Processing QR code</string>
    <string name="scan_oxpush2_prompt">Scan oxPush2 login code</string>
    <string name="app_header">Gluu oxPush2</string>
    <string name="oxpush2_into_text">Open Source Mobile Authentication from Gluu</string>
    <string name="one_step">One Step</string>
    <string name="two_step">Two Step</string>
    <string name="action_manage_keys">Manage Keys</string>
    <string name="process_u2f_start">Attemting to get Fido U2F request, please wait…</string>
    <string name="process_u2f_request">Processing Fido U2F request, please wait…</string>
    <string name="no_valid_key_handles">The aren\'t valid devices associated with specified application. Can you try again and remove expired key(s) associated this application</string>
    <string name="failed_process_challenge">Fido U2F challenge was rejected</string>
    <string name="wrong_u2f_metadata">Failed to get Fido U2F metadata</string>
    <string name="wrong_token_response">Fido U2F token response is invalid</string>
    <string name="failed_process_status">Get unexpected Fido U2F status</string>
    <string name="failed_process_response">Fido U2F response was rejected</string>
    <string name="challenge_doesnt_match">Challenges doesn\'t match</string>
    <string name="auth_result_success">Successful authentication</string>
    <string name="enroll_result_success">Successful denied</string>
    <string name="auth_result_failed">Authentication failure</string>
    <string name="invalid_qr_code">QR code contains invalid oxPush2 request</string>
    <string name="failed_subscribe_push_notification">Failed to subscribe application for push notifications</string>
    <string name="label_application">Application</string>
    <string name="label_user_name">User Name</string>
    <string name="label_authentication_method">Authentication Mode</string>
    <string name="label_authentication_type">Authentication Type</string>
    <string name="label_created">Created</string>
    <string name="label_issuer">Issuer</string>
    <string name="button_approve">Approve</string>
    <string name="button_decline">Decline</string>
    <string name="button_delete">Delete</string>
    <string name="keyHandle_created">Pairing Date</string>
    <string name="confirm_delete">Confirm delete</string>
    <string name="approve_delete">Are you sure you want to delete this keyHandle?</string>
    <string name="badge_detail">Badge Details</string>
    <string name="fail">Fail</string>
    <string name="gender">Gender</string>
    <string name="birthdate">Birthdate</string>
    <string name="email">Email</string>
    <string name="profile">Profile</string>
    <string name="erasmus">ERASMUS</string>
    <string name="erasmus_full">Emergency Responder Authentication System for Mobile Users</string>
    <string name="copy_public_url"><u>copy public URL</u></string>
    <string name="unable_to_process"><u>Unable to process request</u></string>
    <string name="expires_at">Expires At:</string>
    <string name="expires_at_dummy">May 15,2018</string>
    <string name="name">Name:</string>
    <string name="name_dummy">John smith</string>
    <string name="badge">Badge:</string>
    <string name="badge_dummy">Basic fire fighter</string>
    <string name="allow">Allow</string>
    <string name="deny">Deny</string>
    <string name="badge_permission_denied">Permission to see this badge is denied by asserter</string>
    <string name="no_internet">No internet connection!!!</string>

    <!--data passing keys-->
    <string name="key_message">message</string>
    <string name="key_badge">badge</string>
    <string name="key_badge_title">badgeTitle</string>
    <string name="key_type">notifyType</string>
</resources>
