<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/tv_organization"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/value_100"
        android:gravity="center"
        android:text="@string/dummy_org"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_22" />

    <Button
        android:id="@+id/start_auth"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="@dimen/value_55"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/value_100"
        android:layout_marginRight="@dimen/value_100"
        android:background="@color/colorAccent"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="@dimen/text_22"
        android:visibility="visible" />

    <TextView
        android:id="@+id/tv_change_organization"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/value_20"
        android:gravity="center"
        android:text="@string/change_org"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/text_22" />

</RelativeLayout>
