<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <RelativeLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/coordinator"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"/>

        <!--
                displayed while token requests are occurring
                -->
        <LinearLayout
            android:id="@+id/loading_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbar"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/loading_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ProgressBar
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="true" />

        </LinearLayout>

        <!-- Shown when authorization has failed. -->
        <LinearLayout
            android:id="@+id/not_authorized"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/loading_container"
            android:orientation="vertical">

            <TextView
                style="@style/Base.TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/not_authorized" />

            <TextView
                android:id="@+id/explanation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp" />

            <Button
                android:id="@+id/reauth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reauthorize" />

        </LinearLayout>

        <!-- Shown when the user is authorized, and there are no pending operations -->
        <LinearLayout
            android:id="@+id/authorized"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/not_authorized"
            android:orientation="vertical">

            <TextView
                style="@style/Base.TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/auth_granted"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="gone">

                <Button
                    android:id="@+id/refresh_token"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/refresh_token" />

                <Button
                    android:id="@+id/view_profile"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/view_profile" />

                <Button
                    android:id="@+id/sign_out"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_out" />
            </LinearLayout>

            <TextView
                android:id="@+id/refresh_token_info"
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:visibility="gone"
                tools:text="Refresh token returned" />

            <TextView
                android:id="@+id/access_token_info"
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                tools:text="Token expires at: 2016-01-01 12:00 UTC" />

            <TextView
                android:id="@+id/id_token_info"
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:visibility="gone"
                tools:text="ID token returned" />

            <LinearLayout
                android:id="@+id/userinfo_card"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="8dp"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/userinfo_profile"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:contentDescription="@string/userinfo_profile_content_description"
                        app:srcCompat="@drawable/unknown_user_48dp" />

                    <TextView
                        android:id="@+id/userinfo_name"
                        style="@style/Base.TextAppearance.AppCompat.Title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingEnd="0dp"
                        android:paddingLeft="8dp"
                        android:paddingRight="0dp"
                        android:paddingStart="8dp"
                        tools:text="Jane Doe" />

                </LinearLayout>

                <TextView
                    android:id="@+id/userinfo_json"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    tools:text="{'blah': 'blah'}" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    style="@android:style/TextAppearance.Large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="25dp"
                    android:text="@string/app_header"/>

                <LinearLayout
                    android:id="@+id/fragment_container"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"/>
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@android:drawable/ic_dialog_info"
        android:visibility="gone"/>

</android.support.design.widget.CoordinatorLayout>
